updated the requirements.txtn

--- a/projectsite/requirements.txt
+++ b/projectsite/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.3
 cryptography==46.0.1
 Django==5.2.5
 django-allauth==65.11.2
+django-pwa==2.0.1
 django-widget-tweaks==1.5.0
 Faker==37.5.3
 idna==3.10
